<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="firstapp.diyandroid.com.yourfirstapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:contentDescription="@string/coffee_outside_view_description"
                android:scaleType="centerCrop"
                android:src="@drawable/rio_coffee" />

            <LinearLayout
                android:id="@+id/aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/circular_std"
                    android:paddingTop="10dp"
                    android:text="@string/about_us_heading"
                    android:textColor="@android:color/white"
                    android:textSize="23sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/coffee_logo_description"
                        android:padding="15dp"
                        android:src="@mipmap/ic_launcher_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/store_story"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:padding="10dp"
                    android:contentDescription="@string/coffee_interior_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rio_coffee_interior" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/coffe_story2"
                    android:textColor="@android:color/white"
                    android:textStyle="italic" />

                <LinearLayout
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/circular_std"
                        android:paddingTop="10dp"
                        android:text="@string/address_heading"
                        android:textColor="@android:color/white"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/store_address"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/workingHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/circular_std"
                        android:text="@string/working_hours_heading"
                        android:textColor="@android:color/white"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="10dp"
                        android:text="@string/store_timings"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contactDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/circular_std"
                        android:text="@string/contact_us_heading"
                        android:textColor="@android:color/white"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/circular_std"
                        android:text="@string/store_phoneno"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular_std"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/store_website"
                        android:textColor="@android:color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular_std"
                        android:text="@string/store_email"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:textColor="@android:color/white"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>